Dev:SP4(ECPV-ECPV-2624) Fixed RM Visit Upload button alignment fixed

--- a/src/assets/css/rlo-style.scss
+++ b/src/assets/css/rlo-style.scss
@@ -3968,6 +3968,12 @@ rlo-ui-card-field {
   float: right;
 }
 
+.upload-btn-container{
+  line-height: 7rem;
+}
+#VRF_UPLOAD_BTN{
+ // margin-top: 8px;
+  margin-left: 0px;
+}
+
 .wgt-date-multiselect {}
-
-
